--- a/scott/HW2/Five Little Peppers At School/style.css
+++ b/scott/HW2/Five Little Peppers At School/style.css
@@ -10,7 +10,10 @@ body.index {
 h1.book-title {
 	display: inline-block;
 }
-
+ul, li {
+	margin:0;
+	padding:0;
+}
 .chapters li{
 	list-style: none;
 	text-align: center;
