--- a/chandler/style.css
+++ b/chandler/style.css
@@ -41,6 +41,7 @@ body {
     border-top: none;
     width:100%;
     top: 100%;
+    z-index: 10;
 }
 .nav li:hover ul {
     left: auto;
@@ -140,3 +141,27 @@ p.text-break {
         animation-delay:.25s;
 }
 @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+.centeredelements {
+    text-align: center;
+    display:block;
+}
+.centeredelements li{
+    display:inline;
+}
+h1 {
+    text-align: center;
+}
+img.listimage {
+    width: 245px;
+    height: 400px;
+    transition: all .2s;
+    border:8px solid black;
+    margin: 15px;
+    transform: translateY(0px);
+}
+img.listimage:hover {
+    width:245px;
+    height:400px;
+    transform: translateY(20px);
+    transition: all .2s;
+}
